@@ -5,8 +5,10 @@ v1.5.xxxx.0 - unreleased
  NEW    : Added new options to always default to external subtitles, ignore
           embedded subtitles and to set the autoload subtitle paths
  NEW    : LCN support for DVB
- NEW    : Added support for 'in24', 'fl64', 8-bit 'sowt', 'IMA4' and 'NONE'
+ NEW    : Added support for "in24", "fl64", 8-bit "sowt", "IMA4" and "NONE"
           audio (old QuickTime PCM)
+ NEW    : Added support for "in24", "in32", "fl32", "fl64"
+         (both big-endian and little-endian) in .mov files
  NEW    : Added channel encryption detection for DVB-t during scan
  NEW    : Ticket #784, Enable ctrl+A in the MediaInfo window
  NEW    : Added EPG current event information for DVB
